@@ -20,15 +20,15 @@
 
 package at.helpch.placeholderapi.commands.impl.local;
 
+import java.awt.*;
 import java.util.List;
 import java.util.Optional;
 
-import at.helpch.placeholderapi.PlaceholderAPI;
 import at.helpch.placeholderapi.PlaceholderAPIPlugin;
 import at.helpch.placeholderapi.commands.PlaceholderCommand;
 import at.helpch.placeholderapi.expansion.PlaceholderExpansion;
-import at.helpch.placeholderapi.util.Msg;
-import org.bukkit.command.CommandSender;
+import com.hypixel.hytale.server.core.Message;
+import com.hypixel.hytale.server.core.command.system.CommandSender;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Unmodifiable;
 
@@ -43,36 +43,43 @@ public final class CommandExpansionUnregister extends PlaceholderCommand {
                          @NotNull final CommandSender sender, @NotNull final String alias,
                          @NotNull @Unmodifiable final List<String> params) {
         if (params.isEmpty()) {
-            Msg.msg(sender,
-                    "&cYou must specify the name of the expansion.");
+            sender.sendMessage(Message.raw("You must specify the name of the expansion.").color(Color.RED));
+//            Msg.msg(sender,
+//                    "&cYou must specify the name of the expansion.");
             return;
         }
 
-        final Optional<PlaceholderExpansion> expansion = plugin.getLocalExpansionManager()
+        final Optional<PlaceholderExpansion> expansion = plugin.localExpansionManager()
                 .findExpansionByName(params.get(0));
         if (!expansion.isPresent()) {
-            Msg.msg(sender,
-                    "&cThere is no expansion loaded with the identifier: &f" + params.get(0));
+            sender.sendMessage(Message.raw("There is no expansion loaded with the identifier: ").color(Color.RED).insert(Message.raw(params.getFirst()).color(Color.WHITE)));
+//            Msg.msg(sender,
+//                    "&cThere is no expansion loaded with the identifier: &f" + params.get(0));
             return;
         }
 
-        final String message = !expansion.get().unregister() ?
-                "&cFailed to unregister expansion: &f" :
-                "&aSuccessfully unregistered expansion: &f";
+//        final String message = !expansion.get().unregister() ?
+//                "&cFailed to unregister expansion: &f" :
+//                "&aSuccessfully unregistered expansion: &f";
+        final Message message = !expansion.get().unregister() ?
+                Message.raw("Failed to unregister expansion: ").color(Color.RED) :
+                Message.raw("Successfully unregistered expansion: ").color(Color.GREEN);
 
-        Msg.msg(sender, message + expansion.get().getName());
+        sender.sendMessage(message.insert(Message.raw(expansion.get().getName()).color(Color.WHITE)));
+//        sender.sendMessage(Message.raw(message + exp));
+//        Msg.msg(sender, message + expansion.get().getName());
     }
 
-    @Override
-    public void complete(@NotNull final PlaceholderAPIPlugin plugin,
-                         @NotNull final CommandSender sender, @NotNull final String alias,
-                         @NotNull @Unmodifiable final List<String> params, @NotNull final List<String> suggestions) {
-        if (params.size() > 1) {
-            return;
-        }
-
-        suggestByParameter(PlaceholderAPI.getRegisteredIdentifiers().stream(), suggestions,
-                params.isEmpty() ? null : params.get(0));
-    }
+//    @Override
+//    public void complete(@NotNull final PlaceholderAPIPlugin plugin,
+//                         @NotNull final CommandSender sender, @NotNull final String alias,
+//                         @NotNull @Unmodifiable final List<String> params, @NotNull final List<String> suggestions) {
+//        if (params.size() > 1) {
+//            return;
+//        }
+//
+//        suggestByParameter(PlaceholderAPI.getRegisteredIdentifiers().stream(), suggestions,
+//                params.isEmpty() ? null : params.get(0));
+//    }
 
 }
